# Crud_Coco_Bambu_

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/templates/registration/: login.html
backend/users/: admin.py  auth_views.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_create_oauth_app.py
backend/users/tests/: test_api.py  test_permissions.py
frontend/: .dockerignore  Dockerfile  angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/core/: admin.guard.ts  auth.interceptor.ts  auth.service.ts  env.ts  login.guard.ts  pkce.ts  token.store.ts
frontend/src/app/pages/: admin-users.component.ts  callback.component.ts  login.component.ts  me.component.ts
